# linearprogequiv2026_code

./: README.html  README.md
equivalence_linear_program_algo/EquivLinProg/: CMakeLists.txt  algo_enhanced.cpp  algo_enhanced.h  main.cpp  matrix_tool.cpp  matrix_tool.h  pairhash.h  permutation.cpp  permutation.h  printing_tool.cpp  printing_tool.h  save_results_cpp.py  solutions.cpp  solutions.h  test.cpp  thread_for_equiv.cpp  threads_luby_algos_netlib.txt
equivalence_linear_program_algo/EquivLinProg/matrices_data/netlib/lp/lp_npz2/matrices_eq/: 25fv47.txt  80bau3b.txt  adlittle.txt  afiro.txt  agg.txt  agg2.txt  agg3.txt  bandm.txt  beaconfd.txt  blend.txt  bnl1.txt  bnl2.txt  boeing1.txt  boeing2.txt  bore3d.txt  brandy.txt  capri.txt  cycle.txt  czprob.txt  d2q06c.txt  d6cube.txt  degen2.txt  degen3.txt  e226.txt  etamacro.txt  fffff800.txt  finnis.txt  fit1d.txt  fit1p.txt  forplan.txt  ganges.txt  gfrd-pnc.txt  greenbea.txt  greenbeb.txt  grow15.txt  grow22.txt  grow7.txt  israel.txt  kb2.txt  lotfi.txt  (+48 more)
equivalence_linear_program_algo/EquivLinProg/matrices_data/netlib/lp/lp_npz2/matrices_eq_pro/: 25fv47.txt  80bau3b.txt  adlittle.txt  afiro.txt  agg.txt  agg2.txt  agg3.txt  bandm.txt  beaconfd.txt  blend.txt  bnl1.txt  bnl2.txt  boeing1.txt  boeing2.txt  bore3d.txt  brandy.txt  capri.txt  cycle.txt  czprob.txt  d2q06c.txt  d6cube.txt  degen2.txt  degen3.txt  dfl001.txt  e226.txt  etamacro.txt  fffff800.txt  finnis.txt  fit1d.txt  fit1p.txt  fit2d.txt  fit2p.txt  forplan.txt  ganges.txt  gfrd-pnc.txt  greenbea.txt  greenbeb.txt  grow15.txt  grow22.txt  grow7.txt  (+53 more)
(+14202 files in other folders)
